fix(batch) Fix batch group form field alignment

--- a/src/app/trip/batch/group/batch-groups.table.scss
+++ b/src/app/trip/batch/group/batch-groups.table.scss
@@ -102,7 +102,8 @@
       }
 
       .mat-column-top-end {
-        @extend .mat-column-actions;
+        max-width: var(--mat-column-actions-max-width);
+        padding: 0 !important;
       }
 
       /* reset computed*/
